part of Semianalytic inversion method...

--- a/Background_and_Theory.tex
+++ b/Background_and_Theory.tex
@@ -399,7 +399,7 @@ where $L_{sg}(\lambda)$ is the TOA radiance due to sky glint, $\rho_F(\lambda)$ 
 \subsection{Water Constituents Retrieval}
 % See \cite{Jensen} and \cite{Mustard2001}.
 % ----------------------------------------------------
-\subsubsection{In Water Radiative Transfer}
+\subsubsection{In-Water Radiative Transfer}
 % ------------------------------------------------
 \subsubsection*{IOPs}
 \addcontentsline{toc}{subsubsection}{IOPs}
@@ -561,12 +561,18 @@ where $K_d(z,\lambda)$ is the {\it spectral diffuse attenuation coefficient} for
           &=-\frac{1}{E_d(z,\lambda)}\frac{dE_d(z,\lambda)}{dz} ~~\left[m^{-1} \right].
 \end{align}
 % Other $K$ functions such as $K_u$, $K_o$, or $K_L$ can be obtained using similar definition with the corresponding radiometric quantities such $E_u$, $E_o$, or $L$.
-\todo{not to forget this paragraph}
 
-It is important to note that AOPs are not additive as the IOPs. Also, AOPs can not be measured in the lab or on a water sample, therefore they must be measured in situ.
+It is important to note that AOPs are not additive as the IOPs. Also, AOPs can not be measured in the lab or on a water sample, therefore they must be measured {\it in situ}.
 
 % ------------------------------------------
-\subsection{AOP and IOP Relationship}
+\subsection{Deriving IOPs from AOPs}
+The reflectance inversion methods refer to method to derive IOPs (e.g. absorption $a$ and scattering $b$ coefficients) from AOPs (e.g. $R_{rs}$). There two kinds of inversion methods: empirical and semi-analytic models. The general expression of optical closure relationships is well known \{$R_{rs}(\lambda)~or~L_{wN} = f[b_b(\lambda)/a(\lambda)]$\} with $R_{rs}=L_w/E_d$ the remote-sensing reflectance and $L_{wN}$ the normalized water-leaving radiance \cite{Morel:1977rw,Maritorena:02}. \cite{Gordon:1988qv} derived this relationship as
+\begin{equation}\label{eq:semianal}
+  \hat{L}_{wN} = \frac{tF_0(\lambda)}{n_w^2} \sum_{i=1}^2g_i\left[\frac{b_b(\lambda)}{b_b(\lambda)+a(\lambda)}\right]^i
+\end{equation}
+\noindent where $t$ is the sea-air transmission factor, $F_0(\lambda)$ is the extraterrestrial solar irradiance, $n_w$ is the index of refraction of the water, and the $g_i$ terms are fitting coefficients from Monte Carlo simulations of an idealized ocean by \cite{Gordon:1986fr}. If \autoref{eq:semianal} is used at first order only, the $g_1$ term becomes the $f/Q$ factor, which is dependent on the viewing geometry and not constant \cite{Maritorena:02}.
+
+This was extended by \cite{Lee2002_invQAA} and \cite{Werdell2013_inv}. 
 % ------------------------------------------
 \subsection{Standard Algorithms (NASA)}
 \subsubsection{$C_a$}
