--- a/Methodology.tex
+++ b/Methodology.tex
@@ -4,7 +4,7 @@
 \chapter{Methodology and Approach}
 \label{ch:method}
 
-The methodology is separated into the specific objectives mentioned in \S\ref{ch:objectives}. The retrieval process described in this work was first introduced by \cite*{Concha2013IGARSS} and is based on previous work done by \cite{Raqueno:2000}, \cite{Gerace:2012}, \cite{Pahlevan:2012b} and \cite{Gerace:2013}. A flow diagram of the process is illustrated in \autoref{fig:retrieval}. In short, the retrieval process works as follows. First, the radiance image from the satellite is atmospherically corrected and transformed to $R_{rs}$ spectra, as shown in the diagram. At this point the $R_{rs}$ spectra of water pixels in the scene with unknown CPAs concentrations are compared with a LUT of $R_{rs}$ spectra with known CPAs concentrations. This comparison is made by using a spectrum-matching technique (\cite{Raqueno:2000,Mobley:2005}) that calculates the root mean squared error (RMSE) to find the closest match in the LUT. The end products are maps of CPAs concentrations (see \autoref{fig:retrieval}). Each step in this retrieval process is described in more detail below.
+The methodology is separated into the specific objectives mentioned in \S\ref{ch:objectives}. The retrieval process described in this work was first introduced by \cite{Concha2013IGARSS} and is based on previous work done by \cite{Raqueno:2000}, \cite{Gerace:2012}, \cite{Pahlevan:2012b} and \cite{Gerace:2013}. A flow diagram of the process is illustrated in \autoref{fig:retrieval}. In short, the retrieval process works as follows. First, the radiance image from the satellite is atmospherically corrected and transformed to $R_{rs}$ spectra, as shown in the diagram. At this point the $R_{rs}$ spectra of water pixels in the scene with unknown CPAs concentrations are compared with a LUT of $R_{rs}$ spectra with known CPAs concentrations. This comparison is made by using a spectrum-matching technique (\cite{Raqueno:2000,Mobley:2005}) that calculates the root mean squared error (RMSE) to find the closest match in the LUT. The end products are maps of CPAs concentrations (see \autoref{fig:retrieval}). Each step in this retrieval process is described in more detail below.
 
 In this work, a look-up-table (LUT) methodology was implemented to retrieve concentration of water constituents using Landsat-8 imagery. Figure~\ref{fig:retrieval} shows a diagram of this retrieval process. First, the Landsat-8 image data (shown at the top of the figure) needs to be atmospherically corrected. Then, a non-linear optimization routine uses the water pixels (reflectance values) and a LUT of reflectance spectra to estimate concentrations for each water pixels in the scene. The outputs from the process are concentration maps for each water constituents, as shown in Figure~\ref{fig:retrieval}. This process is explained in detail in \S\ref{sec:atmcorr} and \S\ref{sec:retrieval} below.
 
